--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,21 @@
 spring:
   redis:
-    sentinel:
-      master: mymaster
+    cluster:
       nodes:
-        - 127.0.0.1:26379
-        - 127.0.0.1:26380
-        - 127.0.0.1:26381
+        - 127.0.0.1:7000
+        - 127.0.0.1:7001
+        - 127.0.0.1:7002
+        - 127.0.0.1:7003
+        - 127.0.0.1:7004
+        - 127.0.0.1:7005
+      max-redirects: 3
+    timeout: 3000ms
     lettuce:
       pool:
-        max-active: 10
-        max-idle: 10
-        min-idle: 2
-        test-on-borrow: true
-#        test-while-idle: true
-      shutdown-timeout: 100ms
-    timeout: 3000ms
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: -1ms
 
 logging:
   level:
