--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.apache.commons:commons-pool2' // Lettuce pool
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.redisson:redisson:3.50.0'
 }
 
 tasks.named('test') {
