--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,22 @@
 spring:
-  redis:
-    cluster:
-      nodes:
-        - 127.0.0.1:7000
-        - 127.0.0.1:7001
-        - 127.0.0.1:7002
-        - 127.0.0.1:7003
-        - 127.0.0.1:7004
-        - 127.0.0.1:7005
-      max-redirects: 3
-    timeout: 3000ms
-    lettuce:
-      pool:
-        max-active: 8
-        max-idle: 8
-        min-idle: 0
-        max-wait: -1ms
+  data:
+    redis:
+      password:
+      cluster:
+       max-redirects: 3
+       nodes:
+          127.0.0.1:7000,
+          127.0.0.1:7001,
+          127.0.0.1:7002,
+          127.0.0.1:7003,
+          127.0.0.1:7004,
+          127.0.0.1:7005
+      lettuce:
+         pool:
+           max-active: 8
+           max-idle: 8
+           min-idle: 0
+           max-wait: -1ms
 
 logging:
   level:
