(chore) redisson 로깅 및 누락 setter 추가, 스트링 코덱 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,5 @@ logging:
   level:
     io.lettuce.core: DEBUG
     org.springframework.data.redis: DEBUG
+#    org.redisson.connection: DEBUG
+    org.redisson.command: DEBUG
